--- a/main/templates/weather/index.html
+++ b/main/templates/weather/index.html
@@ -9,8 +9,7 @@
 	<form method="POST">
 		{% csrf_token %}
 		<input type="text" name="city_one" value="" placeholder="City One">
-		<input type="text" name="city_two" value="" placeholder="City Two">
-		<button type="submit">Compare Weather</button>
+		<button type="submit">Get Weather</button>
 
 	</form>
 
