--- a/main/templates/weather/index.html
+++ b/main/templates/weather/index.html
@@ -1,29 +1,43 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>OBUDDE</title>
+        <link rel="stylesheet" href="{% static 'main/index.css' %}">
 </head>
 <body>
 	<form method="POST">
 		{% csrf_token %}
-		<input type="text" name="city_one" value="" placeholder="City One">
+		<input type="text" name="city_one" value="" placeholder="City">
 		<button type="submit">Get Weather</button>
 
 	</form>
 
-	<div class="comparison-container">
-		{% if weather_data_one %}
+	<div class="container">
 		<div class="city-container">
-			{% include 'weather/city_weather.html'  with weather_data=weather_data_one daily_forecasts=daily_forecasts_one %}
+                        {% if weather_data %}
+                                <h1>{{ weather_data.city }}</h1>
+                                <h2>{{ weather_data.temperature }}</h2>
+                                <p>{{ weather_data.description }}</p>
+                                <img src="http://openweathermap.org/img/w/{{ weather_data.icon }}.png" alt="{{ weather_data.description }}">
+                        {% endif %}
+
+                        {% if daily_forecasts %}
+                        <h2>Tomorrow!</h2>
+                        <div class="forecast-container">
+                                {% for forecast in daily_forecasts %}
+                                        <div class="forecast">
+                                                <h3>{{ forecast.day }}</h3>
+                                                <p>{{ forecast.min_temp }}°C - {{ forecast.max_temp }}°C</p>
+                                                <p>{{ forecast.description }}</p>
+                                                <img src="http://openweathermap.org/img/w/{{ forecast.icon }}.png" alt="{{ forecast.description }}">
+                                        </div>
+                                {% endfor %}
+                        </div>
+                        {% endif %}
 		</div>
-		{% endif %}
-		{% if weather_data_two %}
-		<div class="city-container">
-			{% include 'weather/city_weather.html'  with weather_data=weather_data_one daily_forecasts=daily_forecasts_one %}
-		</div>
-		{% endif %}
 	</div>
 </body>
 </html>
