--- a/main/static/main/index.css
+++ b/main/static/main/index.css
@@ -7,6 +7,9 @@
         box-sizing: border-box;
         font-family: "Roboto", sans-serif;
 }
+body {
+        overflow-x:hidden;
+}
 
 form {
         padding: 20px;      
@@ -34,4 +37,45 @@ form button {
         border-radius:7px;
         cursor: pointer;
         box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+}
+
+.container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: left;
+        height: 100vh;
+}
+
+.city-container {
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
+}
+
+.city-container h1 {
+        font-size: 50px;
+        margin-bottom: 20px;
+}
+.forecast-container {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+        gap:50px;
+        padding:100px;
+}
+
+.forecast {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
+        border-radius: 7px;
+        box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+        text-align: center;
 }
