--- a/main/static/main/index.css
+++ b/main/static/main/index.css
@@ -9,6 +9,7 @@
 }
 body {
         overflow-x:hidden;
+        background: url("images/weather_background_one.png")
 }
 
 form {
@@ -26,12 +27,13 @@ form input[type="text"] {
         border:none;
         font-size:20px;
         border-radius:7px;
+        opacity: 0.8;
 }
 
 form button {
         padding: 10px;
         border:none;
-        background-color: #4CAF50;
+        background-color: #da132e;
         color: white;
         font-size:20px;
         border-radius:7px;
@@ -45,6 +47,7 @@ form button {
         align-items: center;
         justify-content: left;
         height: 100vh;
+        
 }
 
 .city-container {
@@ -60,15 +63,24 @@ form button {
         margin-bottom: 20px;
 }
 .forecast-container {
+        padding:100px;
+}
+.forecast-container h2 {
+        font-size: 30px;
+        margin-bottom: 20px;
+        width:100%;
+        text-align:center;
+}
+
+.forecasts {
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        margin-top: 20px;
-        gap:50px;
-        padding:100px;
+        gap:10px;
+        /* width:100%; */
+        overflow-x: auto;
 }
-
 .forecast {
         display: flex;
         flex-direction: column;
@@ -78,4 +90,6 @@ form button {
         border-radius: 7px;
         box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
         text-align: center;
+        background-color: rgba(250, 247, 247, 0.7);
+        width:250px;
 }
